yaml-files/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
spec:
  selector:
    app: cloudsql-proxy
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
    


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsql-proxy
spec:
  selector:
    matchLabels:
      app: cloudsql-proxy
  template:
    metadata:
      labels:
        app: cloudsql-proxy
    spec:
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "--port=3306"
          - "ringed-rune-412119:us-central1:loginapp"
          - "--credentials-file=/secrets/cloudsql/credentials.json"      
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
        resources:
          limits:
            memory: "128Mi"
            cpu:    "200m"
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
