yaml-files/pyth-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginapp
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: loginapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginapp
spec:
  selector:
    matchLabels:
      app: loginapp
  template:
    metadata:
      labels:
        app: loginapp
    spec:
      containers:
      - name: loginapp
        image: gcr.io/ringed-rune-412119/cicdproj
        volumeMounts:
            - name: loginapp-persistent-storage
              mountPath: /var/www/html
            - name: loginapp-instance-credentials
              mountPath: /secrets/cloudsql
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
          name: loginapp
      volumes:
       - name: loginapp-persistent-storage
         persistentVolumeClaim:
           claimName: loginapp-1
       - name: loginapp-instance-credentials
         secret:
           secretName: loginapp-instance-credentials
